// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Logged In State 1`] = `
<div
  class="navbar"
>
  <span>
    Logged in as: 
    Bob
  </span>
  <a
    href="/"
  >
    Home
  </a>
  <a
    href="/admin"
  >
    Admin
  </a>
  <a
    href="/logout"
  >
    Logout
  </a>
</div>
`;

exports[`Nav Logged out State 1`] = `
<div
  class="navbar"
>
  <a
    href="/"
  >
    Home
  </a>
  <a
    href="/admin"
  >
    Admin
  </a>
  <a
    href="/login"
  >
    Login
  </a>
</div>
`;

exports[`Nav Renders Nav 1`] = `
<div
  class="navbar"
>
  <a
    href="/"
  >
    Home
  </a>
  <a
    href="/admin"
  >
    Admin
  </a>
  <a
    href="/login"
  >
    Login
  </a>
</div>
`;
